--- a/ui/style.css
+++ b/ui/style.css
@@ -2,7 +2,7 @@ body
 {
     font-family:"",serif;
     font-size:100%;
-    background-color:#FFFFFF;
+    background-color:black;
    
 }
 
@@ -17,11 +17,10 @@ h1
     color:#00AAFF;
 }
 
-.text-big 
+.text
 {
-    color:green;
-    font-size: 100%;
-    
+    color:white;
+    font-size: 10%;
 }
 
 .bold {
